migrate to Java1.8 and resolve compile warning